set absolute max width to avoid jumpiness

--- a/app/_assets/stylesheets/pages/extension.less
+++ b/app/_assets/stylesheets/pages/extension.less
@@ -16,7 +16,7 @@
 @media (min-width: 1601px) {
   .page-extension-profile {
     .container {
-      max-width: 75%;
+      max-width: 1366px;
     }
   }
 }
